Implementation of Browse Page and Basic Home Page including Navbar
Changes :
1.  Implemented Navbar under the name 'CommonNavbar'
2. Minor Styling to Add Product Page
3. Implented Home Page having a Carousel. which has 3 FeaturedProducts
4. Deleted Old Home Page having three buttons
5. Fixed Login Page styling Bug. and implemenation of conditional afterlogin navigate acc. to user rights
6.  Implemented Search Functionality, the results of which are shown in Browse Page
7.  Added Search Route in Server ( post '/search' )

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4,6 +4,9 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Trade+Winds&display=swap" rel="stylesheet">
 
   <title>Portal</title>
 
@@ -13,7 +16,7 @@
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
 
-  <script src="https://kit.fontawesome.com/325069f2df.js" crossorigin="anonymous"></script>
+
 </body>
 
 </html>
