Theme Update and Visual Changes
1. Updated to antd 5.2^ .. use npm i antd to update

2. Updated a default theme throughout the app. Now use only type="primary" to get default rimary color and so on.

2. All components use the theme by default

3.  Fixed Select not showing options in Mobile View

4. Current Selected Tab now bordered in admin Panel

5. menu Items highlighted on hover throughiut the app

6. Implemented Logo for the app

7. minor bug Fixes in the app

8. removed Unneccessary images in assets

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -8,7 +8,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Trade+Winds&display=swap" rel="stylesheet">
 
-  <title>Portal</title>
+  <title>AlSaleels</title>
 
 </head>
 
