--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,12 +7,15 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Trade+Winds&display=swap" rel="stylesheet">
-
+  <link rel="icon" href="%PUBLIC_URL%/logo.png" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@700&display=swap" rel="stylesheet" />
   <title>AlSaleels</title>
-
+  <script src="https://accounts.google.com/gsi/client" async defer></script>
 </head>
 
-<body class="bg-light">
+<body class="">
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
 
