Review Integration and new Logo

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -11,7 +11,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@700&display=swap" rel="stylesheet" />
-  <title>AlSaleels</title>
+  <title>NILE</title>
   <script src="https://accounts.google.com/gsi/client" async defer></script>
 </head>
 
